# PyPivoter

./: LICENSE.txt  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py  stderr
src/: pypivoter.pyx
src/pypivoter/: degeneracy_cliques.pyx  degeneracy_helper.pxd  degeneracy_helper.pyx  pypivoter.pyx
