[metadata]
name = pypivoter
version = 0.0.2
description = Count or list the cliques in a graph using the Pivoter algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Rian Kormos
author_email = rian.kormos@gmail.com
url = https://github.com/rckormos/PyPivoter
download_urls = https://pypi.org/project/pypivoter
project_urls =
    Documentation = https://github.com/rckormos/PyPivoter
    Code = https://github.com/rckormos/PyPivoter
    Issue tracker = https://github.com/rckormos/PyPivoter/issues
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd
